(fix): Misaligned margin

--- a/src/app/modules/newsfeed/feeds/sorted.component.scss
+++ b/src/app/modules/newsfeed/feeds/sorted.component.scss
@@ -44,7 +44,7 @@ m-newsfeed--sorted {
 
 .m-feeds-sorted__fallbackLegend {
   text-align: center;
-  margin: 32px auto 27px;
+  margin: 32px auto 28px;
   height: 0;
   position: relative;
   border-top: 1px solid;
